--- a/dbt_demo/dbt_project.yml
+++ b/dbt_demo/dbt_project.yml
@@ -3,6 +3,7 @@
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
 name: 'dbt_demo'
+version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
 profile: 'dbt_demo'
@@ -11,17 +12,25 @@ profile: 'dbt_demo'
 # The `model-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
 model-paths: ["models"]
+analysis-paths: ["analyses"]
+test-paths: ["tests"]
+seed-paths: ["seeds"]
 macro-paths: ["macros"]
+snapshot-paths: ["snapshots"]
 
+clean-targets:         # directories to be removed by `dbt clean`
+  - "target"
+  - "dbt_packages"
+
+
+# Configuring models
+# Full documentation: https://docs.getdbt.com/docs/configuring-models
+
+# In this example config, we tell dbt to build all models in the example/
+# directory as views. These settings can be overridden in the individual model
+# files using the `{{ config(...) }}` macro.
 models:
   dbt_demo:
-    +materialized: table
     # Config indicated by + and applies to all files under models/example/
-    staging:
-      +database: stg
-      +schema: airbnb
-      +materialized: table
-    integration:
-      +database: int
-      +schema: airbnb
-      
+    example:
+      +materialized: view
